--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:text="Quiz de Games Underground"
+        android:text='Professor, clique em entrar e depois no botão "prova2"'
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
